# AVL-Tree-for-Integer-Intervals

./: CMakeLists.txt  License  MergingIntervals.pro  Readme  Readme.md  avl.cpp  avl.h  configDoxy  main.cpp  node.h
catch_lib/: CMakeLists.txt
docs/html/: README_8md.html  annotated.html  avl_8cpp.html  avl_8h.html  avl_8h_source.html  classAVL-members.html  classAVL.html  classNode-members.html  classNode.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_94941683c8435530c588ae89ea3c80c0.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js  node_8h.html  node_8h_source.html  structInterval-members.html  structInterval.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  files_0.js  functions_0.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: CMakeLists.txt  main.cpp
src/avl/: CMakeLists.txt  avl.cpp  avl.h  node.h
test/: CMakeLists.txt  test_avl_merging_intervals.cpp
